# pyinfraformat

./: .pylintrc  .travis.yml  README.md  codecov.yml  pyproject.toml  qs  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: workflow.yml
pyinfraformat/: __init__.py  core.py  exceptions.py  io.py  parser.py  plot.py  utils.py
pyinfraformat/core/: __init__.py  coord_utils.py  core.py  io.py  parser.py  utils.py
pyinfraformat/plots/: __init__.py  holes.py  map.py  maps.py
pyinfraformat/plots/icons/: hole_icons.py
pyinfraformat/plots/pif_icons/: hole_icons.py
pyinfraformat/tests/: test_coordinates.py  test_general.py  test_io.py  test_object.py  test_plots.py  test_utils.py
pyinfraformat/tests/test_data/: 945be4ea-4427-4891-a0a8-9a98a46d166c_output_example.xlsx  infraformat_data_bad_2.tek  infraformat_data_bad_3.tek  infraformat_data_good_2.tek  infraformat_hole_types.tek
tests/: helpers.py  test_coordinates.py  test_io.py  test_object.py  test_plots.py  test_utils.py
tests/test_data/: infraformat_data_good.tek  infraformat_data_good_2.tek2  infraformat_data_good_utf16.tek  infraformat_hole_types.tek
